# customerRelationshipManagement

./: .gitignore  CMakeLists.txt  README.md  crm.db  crm.db-journal  crm.sqbpro  test.db
hdr/: CRMDatabaseManager.h  DashboardWindow.h  EmployeeLoginForm.h  LogicDataBase.h  LoginWindow.h  MainWindow.h  SessionDetailWidget.h  StartEndWidget.h  logicDb.h
src/: CRMDatabaseManager.cpp  DashboardWindow.cpp  EmployeeLoginForm.cpp  LogicDataBase.cpp  LoginWindow.cpp  MainWindow.cpp  SessionDetailWidget.cpp  StartEndWidget.cpp  logicDb.cpp  main.cpp
teamviewer_amd64-working-directory/: .PKGINFO  control  postinst  postrm  prerm
teamviewer_amd64-working-directory/opt/teamviewer/tv_bin/: teamviewer-managedevice
teamviewer_amd64-working-directory/opt/teamviewer/tv_bin/RTlib/: libicudata.so.63  libssp.so.0  libxcb-icccm.so.4  libxcb-image.so.0  libxcb-keysyms.so.1  libxcb-randr.so.0  libxcb-render-util.so.0  libxcb-util.so.1  libxcb-xinerama.so.0  libxcb-xinput.so.0  libxcb-xkb.so.1  libxkbcommon-x11.so.0  libxkbcommon.so.0
teamviewer_amd64-working-directory/opt/teamviewer/tv_bin/RTlib/qt/lib/: libQt5DBus.so.5  libQt5QmlModels.so.5  libQt5QmlWorkerScript.so.5  libQt5QuickControls2.so.5  libQt5QuickTemplates2.so.5  libQt5Svg.so.5  libQt5WebChannel.so.5  libQt5WebEngine.so.5  libQt5X11Extras.so.5  libQt5XcbQpa.so.5
teamviewer_amd64-working-directory/opt/teamviewer/tv_bin/RTlib/qt/libexec/: QtWebEngineProcess
teamviewer_amd64-working-directory/opt/teamviewer/tv_bin/RTlib/qt/qml/QtWebChannel/: libdeclarative_webchannel.so.debug
teamviewer_amd64-working-directory/opt/teamviewer/tv_bin/RTlib/qt/resources/: qtwebengine_resources.pak  qtwebengine_resources_100p.pak  qtwebengine_resources_200p.pak
teamviewer_amd64-working-directory/opt/teamviewer/tv_bin/desktop/: com.teamviewer.TeamViewer.desktop  teamviewer8.desktop  teamviewer8.desktop.template  teamviewerapi.desktop  teamviewerapi.desktop.template  tvoneweblogin.desktop  tvoneweblogin.desktop.template
teamviewer_amd64-working-directory/opt/teamviewer/tv_bin/script/: TeamViewer2023.asc  teamviewer_setup  tvw_aux  tvw_config  tvw_daemon  tvw_extra  tvw_main  tvw_update
teamviewer_amd64-working-directory/usr/share/applications/: teamviewer8.desktop  tvoneweblogin.desktop
teamviewer_amd64-working-directory/usr/share/dbus-1/services/: com.teamviewer.TeamViewer.Desktop.service  com.teamviewer.TeamViewer.service
ui/: loginWindow.ui  mainWindow.ui  mainWindowAdmin.ui  mainWindowOperator.ui
(+1 files in other folders)
